syntax = "proto3";

package rivet.backend.pkg.cdn.version_publish;

import "resources/legacy/proto/common.proto";
import "resources/legacy/proto/backend/cdn.proto";

message Request {
	rivet.common.Uuid version_id = 1;
	rivet.backend.cdn.VersionConfig config = 2;
	rivet.backend.cdn.VersionConfigCtx config_ctx = 3;
}

message Response {

}
